# zara-chat

./: .env.example  .gitignore  README.md  index.html  index.html.bak  linkedin_post.md  package-lock 2.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite-env.d.ts  vite.config.ts
server/: pyproject.toml  requirements.txt
server/app/: main.py  schemas.py
server/app/memory/: store.py
server/app/providers/: base.py  gemini_provider.py  openai_provider.py
src/: App.tsx  index.css  main.tsx
src/components/chat/: AppHeader.tsx  AppSidebar.tsx  ChatComposer.tsx  ChatMessage.tsx  EmptyState.tsx  ThemeToggle.tsx
src/components/theme/: ThemeProvider.tsx
src/components/ui/: button.tsx
src/lib/: api.ts
src/pages/: Index.tsx
